2011-06-11  duantihua  <duantihua@gmail.com>

	* merge with beangle-struts2-legacy-2.4.0's templates and static resources